Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/switchexpr/ParserRecovery.out
ParserRecovery.java:10:39: compiler.err.expected2: :, ->
ParserRecovery.java:13:31: compiler.err.expected2: :, ->
2 errors
